# veterinaria-api

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  COMANDOS.md  COMANDOS_RAPIDOS.txt  Dockerfile  GITHUB_SETUP.md  GUIA_USUARIO.txt  LICENSE  PASSO_A_PASSO_SWAGGER.txt  POSTGRESQL_SETUP.md  README.md  config.py  database.py  docker-compose.yml  entrypoint.sh  init_db.py  main.py  populate_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup_postgres.py  test_all_endpoints.py  test_api.py  validate_application.py  validate_startup.py
api/: exception_handlers.py  routes.py
api/routers/: atendimentos.py  auth.py  clinicas.py  pets.py  tutores.py  usuarios.py  veterinarios.py
crud/: atendimento.py  clinica.py  pet.py  tutor.py  usuario.py  veterinario.py
models/: models.py
repository/: crud.py
schemas/: atendimento.py  clinica.py  pet.py  tutor.py  usuario.py  veterinario.py
services/: atendimento_service.py  auth.py  dependencies.py  schemas.py  veterinario_service.py
